# BitDMX

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker.yml  frontend.yml  rust.yml
.project/: README.md
backend/: Cargo.toml  README.md
backend/src/: aggregator.rs  api.rs  batch.rs  lib.rs  rollup.rs  storage.rs
bitdmx-basic-app/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
bitdmx-basic-app/app/: globals.css  layout.tsx  page.tsx
bitdmx-basic-app/app/api/prove/: route.ts
bitdmx-basic-app/app/api/verify/: route.ts
bitdmx-basic-app/cairo/: age_proof.cairo
bitdmx-basic-app/lib/: age.ts  countries.ts  crypto.ts
bitdmx-basic-app/tests/: test_age_proof.py  test_age_proof_performance.py
bitdmx-basic-app/zk/: circuit.cairo  prover.ts
design/: README.md
docs/: CI.md  DOCKER.md  QUICKSTART.md  ROADMAP.md  SCRIPTS.md  STRUCTURE.md
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Batches.tsx  Challenges.tsx  Dashboard.tsx  Proofs.tsx
integration/: Cargo.toml  README.md
integration/src/: bitvm.rs  bridge.rs  challenge.rs  lib.rs  taproot.rs
protocol/: Cargo.toml  README.md
protocol/src/: binius.rs  lib.rs  proof.rs  stark.rs  zkvm.rs
research/: README.md
scripts/: build.sh  clean.sh  dev.sh  start.sh  stop.sh  test.sh
