[package]
name = "bitvmx-z-backend"
version = "0.1.0"
edition = "2021"
authors = ["Satoshi's Bride AI Labs & FABOHAX"]
description = "Rollup node simulator, batch builder, and proof aggregator"
license = "MIT"

[dependencies]
# Internal dependencies
bitvmx-z-protocol = { path = "../protocol" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "bitvmx-z-node"
path = "src/bin/node.rs"
