[package]
name = "bitvmx-z-integration"
version = "0.1.0"
edition = "2021"
authors = ["Satoshi's Bride AI Labs"]
description = "Taproot bridge simulator and BitVMX challenge game logic"
license = "MIT"

[dependencies]
# Internal dependencies
bitvmx-z-protocol = { path = "../protocol" }
bitvmx-z-backend = { path = "../backend" }

# Bitcoin libraries
bitcoin = "0.31"
secp256k1 = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
