[package]
name = "bitvmx-z-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Satoshi's Bride AI Labs"]
description = "Binius STARK engine and zkVM runtime for BitVMX-Z"
license = "MIT"

[dependencies]
# STARK proving system (Binius integration)
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"

# Cryptographic primitives
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"

# Binary field arithmetic for Binius
ff = "0.13"
group = "0.13"

[dev-dependencies]
criterion = "0.5"

